--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+[submodule "path_to_submodule"] 
+  path = path_to_submodule 
+  url = git://url-of-source/
